[BEAM-1231] - gpt command-line tool should have a 'parallelism' option
[BEAM-1221] - Need an option to configure multi-threading
[BEAM-1219]	- GPF API should implicitly convert parameter values
[BEAM-1183] - Improve reprojection UI usability
[BEAM-1156] - SubsetOp does not copy metadata
[BEAM-0009] - Define subsets with geographical co-ordinates


Bugs
[BEAM-1248] - Title of transect-plot dialog is not updated if band selection changes
[BEAM-1246] - Layer-Manager does not reflect changes of mask names in Mask-Manager
[BEAM-1241] - For certain AATSR-products, TiePointGeoCoding.getPixelPos(GeoPos, PixelPos) yields wrong results
[BEAM-1239] - For MERIS bands the solar flux has the wrong unit
[BEAM-1229] - OBPG SeaWiFS L2 files can not be opened
[BEAM-1228] - Rangefinder does not work
[BEAM-1227] - PConvert doesn't generate images if profile contains calculated RGB bands
[BEAM-1226] - Subset operator does not extract flags automatically
[BEAM-1223] - gpt command-line usage generates incorrect XML templates
[BEAM-1222] - gpt command-line tool ignores -p option
[BEAM-1220] - GPF API does not use progress monitor
[BEAM-1215] - NetCDF product appears inverted
[BEAM-1213] - Unit of yellow_subs in MERIS product not correct
[BEAM-1212] - RasterDataNode.isPixelValid(x,y) is not thread safe
[BEAM-1211] - SPOT VGT reader parses product time using a locale timezone
[BEAM-1209] - Unable to collocate two data sets
[BEAM-1208] - ProductUtils.copyFlagBands doesn't copy masks
[BEAM-1206] - CF Profile does not write latitude longitude data when writing pixel geo-coding
[BEAM-1205] - SPOT VGT reader dosn not treat unsigned bands correctly
[BEAM-1204] - Reprojection changes product type
[BEAM-1203]	- Application returns with exit code zero in error case
[BEAM-1202] - PConvert does use the user LOCAL instead of ENGLISH
[BEAM-1201] - GPT does use the user LOCAL instead of ENGLISH
[BEAM-1200] - PConvert doesn't generate images
[BEAM-1197] - GPF N1 patcher is not thread safe